RESOLVED FIXED252916
REGRESSION (260781@main): [iOS] TestWebKitAPI.FontAttributes.FontTextStyle is consistently failing
https://bugs.webkit.org/show_bug.cgi?id=252916
Summary REGRESSION (260781@main): [iOS] TestWebKitAPI.FontAttributes.FontTextStyle is...
Ryan Haddad
Reported 2023-02-24 10:36:51 PST
TestWebKitAPI.FontAttributes.FontTextStyle is consistently failing after https://commits.webkit.org/260781@main landed TestWebKitAPI.FontAttributes.FontTextStyle /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm:62 Expected equality of these values: "UICTFontTextStyleTitle1" fontTextStyle Which is: "" /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm:62 Expected equality of these values: "UICTFontTextStyleTitle1" fontTextStyle Which is: "" /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/FontAttributes.mm:466 Expected equality of these values: "UICTFontTextStyleTitle1" [webView stylePropertyAtSelectionStart:@"font-family"] Which is: "-webkit-standard" https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.FontAttributes.FontTextStyle
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-24 10:37:03 PST
Myles C. Maxfield
Comment 2 2023-02-26 19:24:19 PST
EWS
Comment 3 2023-02-27 00:07:06 PST
Committed 260866@main (3f1cb9750c4d): <https://commits.webkit.org/260866@main> Reviewed commits have been landed. Closing PR #10711 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.